Pushed early rework

--- a/src/app/import.scss
+++ b/src/app/import.scss
@@ -1,1 +1,7 @@
-@import 'mentions';
+@import 'app';
+@import 'font';
+@import 'toolbar';
+@import 'scrollbars';
+@import 'scrollers';
+@import 'tooltips';
+@import 'version';
