--- a/src/channels/import.scss
+++ b/src/channels/import.scss
@@ -1,5 +1,6 @@
 @import 'container';
-@import 'categories';
-@import 'channels';
-@import 'privatemessages';
 @import 'panels';
+@import 'channel';
+@import 'category';
+@import 'header';
+@import 'unreadbar';
