--- a/src/chat/import.scss
+++ b/src/chat/import.scss
@@ -1,4 +1,5 @@
 @import 'container';
+@import 'form';
+@import 'message';
 @import 'dividers';
-@import 'messages';
-@import 'textarea';
+@import 'bars';
