--- a/src/channels/_panels.scss
+++ b/src/channels/_panels.scss
@@ -1,10 +1,8 @@
-#app-mount .panels-j1Uci_ {
-  background-color: var(--background-1);
+#app-mount {
+  .panels-j1Uci_ {
+    background: var(--background);
+  }
   .container-1giJp5 {
     border: none;
-  }
-  .button-14-BFJ.enabled-2cQ-u7:hover {
-    color: var(--text-1);
-    background-color: var(--foreground-1);
   }
 }
