--- a/src/app/_toolbar.scss
+++ b/src/app/_toolbar.scss
@@ -1,5 +1,6 @@
 #app-mount {
-  .title-3qD0b- {
+  .title-3qD0b-,
+  .container-1r6BKw {
     background: var(--background);
   }
   .children-19S4PO:after {
