--- a/src/inputs/_button.scss
+++ b/src/inputs/_button.scss
@@ -1,4 +1,19 @@
 #app-mount {
+  // Brand/Blurple buttons
+  .lookFilled-1Gx00P.colorBrand-3pXr91 {
+    background: rgba(var(--accent), 1);
+    transition: box-shadow 0.2s ease;
+    &:hover {
+      box-shadow: inset 0 0 0 100vmax rgba(0,0,0,0.1);
+    }
+  }
+
+
+
+
+
+
+  // Panel buttons
   .button-1YfofB {
     &.buttonColor-7qQbGO {
       background: var(--background-light);
