Continued with Settings and themed Search Results

--- a/src/_light.scss
+++ b/src/_light.scss
@@ -18,7 +18,10 @@ $background: #171a1f;
   --font-weight-semibold: 700;
   --font-weight-bold: 700;
 
-  // Other variables
+  // Box shadows
   --box-shadow: 0 4px 9px rgba(0 0 0 / 0.2);
+  --box-shadow-alt: 0 2px 5px rgba(0 0 0 / 0.1);
+
+  // Scrollbars
   --scrollbar-colour: rgba(0 0 0 / 0.2);
 }
