--- a/src/channels/_channel.scss
+++ b/src/channels/_channel.scss
@@ -2,12 +2,12 @@
   .wrapper-2jXpOf {
     height: auto;
     margin-bottom: 2px;
-    &.modeMuted-3osy7j .name-23GUGE {
+    &.modeMuted-onO3r- .name-23GUGE {
       color: var(--text-muted);
     }
 
-    &.modeUnread-1zpFdA .icon-1DeIlz {
-      color: var(--text-normal);
+    &.modeUnread-1qO3K1 .icon-1DeIlz {
+      color: var(--text-focus);
     }
 
     &.modeSelected-346R90 {
