--- a/src/inputs/_radiogroup.scss
+++ b/src/inputs/_radiogroup.scss
@@ -3,8 +3,8 @@
     border-radius: 5px;
   }
   .card-3Qj_Yx {
-    background: var(--background-dark);
-    border-color: var(--background-dark);
+    background: var(--background);
+    border-color: var(--background);
     &:hover {
       border-color: rgba(var(--accent), 1);
     }
