--- a/src/inputs/_select.scss
+++ b/src/inputs/_select.scss
@@ -3,9 +3,9 @@
   // Default
   .css-gvi9bl-control,
   .css-17e1tep-control {
-    background: var(--background-dark);
+    background: var(--background);
     border-radius: var(--border-radius);
-    border-color: var(--background-dark);
+    border-color: var(--background);
     cursor: pointer;
     &:hover {
       border-color: var(--background-light);
@@ -14,7 +14,7 @@
 
   // Selected
   .css-6fzn47-control {
-    background: var(--background-dark);
+    background: var(--background);
     border-radius: var(--border-radius);
     border-color: rgba(var(--accent), 1);
   }
