--- a/base.css
+++ b/base.css
@@ -14,7 +14,7 @@
   --background-modifier-hover: var(--background-alt);
   --background-modifier-active: var(--background-light);
   --channels-default: var(--text-normal);
-  --version: "MinimalCord 2.0.1 [BETA]" ;
+  --version: "2.0.2";
 }
 
 .theme-light {
@@ -30,6 +30,7 @@
   --font-weight-semibold: 700;
   --font-weight-bold: 700;
   --box-shadow: 0 4px 9px rgba(0 0 0 / 0.2);
+  --box-shadow-alt: 0 2px 5px rgba(0 0 0 / 0.1);
   --scrollbar-colour: rgba(0 0 0 / 0.2);
 }
 
@@ -46,6 +47,7 @@
   --font-weight-semibold: 500;
   --font-weight-bold: 700;
   --box-shadow: 0 4px 9px rgba(0 0 0 / 0.4);
+  --box-shadow-alt: 0 2px 5px rgba(0 0 0 / 0.3);
   --scrollbar-colour: var(--background-light);
 }
 
@@ -108,7 +110,8 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
   display: none !important;
 }
 
-.scroller-1JbKMe {
+.scroller-1JbKMe,
+.scroller-305q3I {
   background: transparent;
 }
 
@@ -125,7 +128,7 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
 }
 
 #app-mount .info-1VyQPT .colorMuted-HdFt4q:first-child:before {
-  content: var(--version);
+  content: "MinimalCord " var(--version) " [BETA]";
   display: block;
 }
 
@@ -176,11 +179,11 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
   height: auto;
   margin-bottom: 2px;
 }
-#app-mount .wrapper-2jXpOf.modeMuted-3osy7j .name-23GUGE {
+#app-mount .wrapper-2jXpOf.modeMuted-onO3r- .name-23GUGE {
   color: var(--text-muted);
 }
-#app-mount .wrapper-2jXpOf.modeUnread-1zpFdA .icon-1DeIlz {
-  color: var(--text-normal);
+#app-mount .wrapper-2jXpOf.modeUnread-1qO3K1 .icon-1DeIlz {
+  color: var(--text-focus);
 }
 #app-mount .wrapper-2jXpOf.modeSelected-346R90 .icon-1DeIlz {
   color: var(--text-focus);
@@ -239,8 +242,26 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
   content: none;
 }
 #app-mount .scrollableContainer-2NUZem {
-  background: var(--background-light);
+  background: var(--background-alt);
+  box-shadow: var(--box-shadow);
   border-radius: var(--border-radius);
+}
+#app-mount .placeholder-37qJjk {
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1.5px;
+  font-size: 12px;
+}
+#app-mount .placeholder-37qJjk,
+#app-mount .slateTextArea-1Mkdgw {
+  padding: 15px;
+}
+#app-mount .attachButton-2WznTc {
+  padding: 15px 16px;
+  height: 52px;
+}
+#app-mount .buttons-3JBrkn {
+  height: 52px;
 }
 
 #app-mount .cozy-3raOZG {
@@ -282,7 +303,7 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
 #app-mount .cozy-3raOZG .wrapper-2aW0bm {
   background: var(--background-light);
   height: 24px;
-  width: 24px;
+  box-shadow: var(--box-shadow-alt);
 }
 #app-mount .cozy-3raOZG .button-1ZiXG9 {
   height: 24px;
@@ -292,6 +313,13 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
 #app-mount .cozy-3raOZG .button-1ZiXG9 svg {
   width: 14px;
   height: 14px;
+}
+#app-mount .cozy-3raOZG .button-1ZiXG9:hover {
+  background: rgba(var(--accent), 1);
+  color: #fff;
+}
+#app-mount .cozy-3raOZG .button-1ZiXG9.dangerous-2r8KxV:hover {
+  background: rgba(var(--discord-red)/1);
 }
 #app-mount .cozy-3raOZG .timestamp-3ZCmNB.alt-1uNpEt {
   width: calc(40px + var(--message-padding));
@@ -528,6 +556,56 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
   margin-right: 0;
 }
 
+#app-mount .container-3ayLPN {
+  background: var(--background-light);
+  box-shadow: var(--box-shadow);
+}
+#app-mount .option-96V44q:after {
+  background: linear-gradient(90deg, transparent, var(--background-light));
+}
+#app-mount .option-96V44q.selected-rZcOL- {
+  background: var(--background-alt);
+}
+
+#app-mount .searchResultsWrap-3-pOjs {
+  background: var(--background-alt);
+  border-top-left-radius: var(--border-radius);
+}
+#app-mount .searchHeader-2XoQg7 {
+  background: var(--background-light);
+  box-shadow: var(--box-shadow-alt);
+}
+#app-mount .channelName-1JRO3C {
+  background: var(--background-alt);
+}
+#app-mount .searchResult-9tQ1uo {
+  border: none;
+}
+#app-mount .searchResult-9tQ1uo:before {
+  background: linear-gradient(0deg, transparent, var(--background-alt));
+}
+#app-mount .searchResult-9tQ1uo:after {
+  background: linear-gradient(180deg, transparent, var(--background-alt));
+}
+#app-mount .searchResult-9tQ1uo.expanded-w_LCGl {
+  background: var(--background);
+  border-radius: var(--border-radius);
+}
+#app-mount .searchResultMessage-1fxgXh .cozy-3raOZG {
+  margin: 0;
+}
+#app-mount .searchResultMessage-1fxgXh:not(.hit-1fVM9e) .cozy-3raOZG:before {
+  content: none;
+}
+#app-mount .searchResultMessage-1fxgXh.hit-1fVM9e {
+  box-shadow: 0 0 10px 6px var(--background-alt);
+  border: none;
+  border-radius: var(--border-radius);
+}
+#app-mount .searchResultMessage-1fxgXh.hit-1fVM9e .cozy-3raOZG {
+  background: var(--background-light);
+}
+
 #app-mount .privateChannels-1nO12o {
   background: transparent;
 }
@@ -632,9 +710,9 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
 
 #app-mount .css-gvi9bl-control,
 #app-mount .css-17e1tep-control {
-  background: var(--background-dark);
+  background: var(--background);
   border-radius: var(--border-radius);
-  border-color: var(--background-dark);
+  border-color: var(--background);
   cursor: pointer;
 }
 #app-mount .css-gvi9bl-control:hover,
@@ -642,7 +720,7 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
   border-color: var(--background-light);
 }
 #app-mount .css-6fzn47-control {
-  background: var(--background-dark);
+  background: var(--background);
   border-radius: var(--border-radius);
   border-color: rgba(var(--accent), 1);
 }
@@ -651,8 +729,8 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
   border-radius: 5px;
 }
 #app-mount .radioGroup-1GBvlr .card-3Qj_Yx {
-  background: var(--background-dark);
-  border-color: var(--background-dark);
+  background: var(--background);
+  border-color: var(--background);
 }
 #app-mount .radioGroup-1GBvlr .card-3Qj_Yx:hover {
   border-color: rgba(var(--accent), 1);
@@ -668,12 +746,80 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
   fill: rgba(var(--accent), 1);
 }
 
+#app-mount .barFill-23-gu- {
+  background: rgba(var(--accent), 1);
+}
+
 #app-mount .layer-3QrUeG[aria-label*=_SETTINGS] {
   background: var(--background);
+}
+#app-mount .layer-3QrUeG[aria-label*=_SETTINGS] .children-rWhLdy > .marginBottom40-2vIwTv:not(.divider-3573oO) {
+  background: var(--background-alt);
+  border-radius: var(--border-radius);
+  padding: 16px;
+  border: none;
+}
+#app-mount .layer-3QrUeG[aria-label*=_SETTINGS] .children-rWhLdy > .marginBottom40-2vIwTv:not(.divider-3573oO) .marginTop8-1DLZ1n {
+  margin-top: 0;
+}
+#app-mount .layer-3QrUeG[aria-label*=_SETTINGS] .children-rWhLdy > .marginBottom20-32qID7:not(.title-3sZWYQ) {
+  background: var(--background-alt);
+  border-radius: var(--border-radius);
+  padding: 16px;
+  border: none;
+}
+#app-mount .layer-3QrUeG[aria-label*=_SETTINGS] .children-rWhLdy > [class*=marginBottom] .container-2_Tvc_:last-child {
+  margin-bottom: 0;
+}
+#app-mount .layer-3QrUeG[aria-label*=_SETTINGS] .children-rWhLdy > [class*=marginBottom] [class*=marginBottom] {
+  padding: 0;
+}
+#app-mount .layer-3QrUeG[aria-label*=_SETTINGS] .children-rWhLdy .children-rWhLdy .flex-1xMQg5.flex-1O1GKY {
+  padding: 0 !important;
+}
+#app-mount .layer-3QrUeG[aria-label*=_SETTINGS] .divider-3573oO {
+  display: none;
+}
+#app-mount .layer-3QrUeG[aria-label*=_SETTINGS] .formNotice-2_hHWR {
+  padding: 0;
+  background: transparent;
 }
 #app-mount .layer-3QrUeG[aria-label*=_SETTINGS] .sidebarRegionScroller-3MXcoP {
   background: var(--background-dark);
 }
 #app-mount .layer-3QrUeG[aria-label*=_SETTINGS] .contentRegionScroller-26nc1e {
   background: var(--background);
+}
+
+#app-mount #user-settings .background-1QDuV2 {
+  background: var(--background-alt);
+  border-radius: var(--border-radius);
+}
+#app-mount #user-settings .fieldList-21DyL8 {
+  background: var(--background-light);
+}
+#app-mount #user-settings .authedApp-mj2Hmd {
+  background: var(--background-alt);
+  border-radius: var(--border-radius);
+  border: none;
+}
+#app-mount #user-settings .children-rWhLdy > .flex-1xMQg5.flex-1O1GKY {
+  background: var(--background-alt);
+  border-radius: var(--border-radius);
+  padding: 16px;
+}
+#app-mount #user-settings .micTest-cP1_6S {
+  background: var(--background-alt);
+  border-radius: var(--border-radius);
+  padding: 16px;
+  margin-top: 20px;
+}
+#app-mount #user-settings .micTest-cP1_6S .marginTop8-1DLZ1n {
+  margin-top: 0;
+}
+#app-mount #user-settings .container-3PXSwK {
+  width: 530px !important;
+}
+#app-mount #user-settings .notches-1sAcEM {
+  background: none;
 }
