--- a/src/_dark.scss
+++ b/src/_dark.scss
@@ -18,7 +18,10 @@ $background: #171a1f;
   --font-weight-semibold: 500;
   --font-weight-bold: 700;
 
-  // Other variables
+  // Box shadows
   --box-shadow: 0 4px 9px rgba(0 0 0 / 0.4);
+  --box-shadow-alt: 0 2px 5px rgba(0 0 0 / 0.3);
+
+  // Scrollbars
   --scrollbar-colour: var(--background-light);
 }
