--- a/src/app/_version.scss
+++ b/src/app/_version.scss
@@ -1,4 +1,4 @@
 #app-mount .info-1VyQPT .colorMuted-HdFt4q:first-child:before {
-  content: var(--version);
+  content: "MinimalCord " var(--version) " [BETA]";
   display: block;
 }
