--- a/src/chat/_form.scss
+++ b/src/chat/_form.scss
@@ -6,8 +6,28 @@
     }
   }
   .scrollableContainer-2NUZem {
-    background: var(--background-light);
+    background: var(--background-alt);
+    box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
+
+  }
+  .placeholder-37qJjk {
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1.5px;
+    font-size: 12px;
+  }
+  .placeholder-37qJjk,
+  .slateTextArea-1Mkdgw {
+    padding: 15px;
+  }
+
+  .attachButton-2WznTc {
+    padding: 15px 16px;
+    height: 52px;
+  }
+  .buttons-3JBrkn {
+    height: 52px;
   }
 }
 
