--- a/src/_dark.scss
+++ b/src/_dark.scss
@@ -24,4 +24,8 @@ $background: #171a1f;
 
   // Scrollbars
   --scrollbar-colour: var(--background-light);
+
+  // Messages
+  --edit-message-box: var(--background-light);
+  --message-background: var(--background-alt);
 }
