--- a/src/chat/_message.scss
+++ b/src/chat/_message.scss
@@ -1,4 +1,12 @@
 #app-mount {
+  // General messages
+  .message-2qnXI6 {
+    .scrollableContainer-2NUZem {
+      background: var(--edit-message-box);
+      box-shadow: none;
+    }
+  }
+
   // Cozy
   .cozy-3raOZG {
     background: transparent;
@@ -8,7 +16,7 @@
     margin-left: 16px;
     margin-right: 8px;
     position: relative;
-
+    // Rounded background
     &:before {
       content: "";
       position: absolute;
@@ -20,26 +28,30 @@
       background: var(--background-alt);
       z-index: -1;
     }
-
+    // Fix positioning for message contents (text and images)
     .contents-2mQqc9,
     .container-1ov-mD {
-      padding-left: calc(40px + (var(--message-padding) * 2));
+      margin-left: calc(40px + (var(--message-padding) * 2));
     }
-
+    // Fix positioning for avatar
     .avatar-1BDn8e {
       left: var(--message-padding);
       top: var(--message-padding);
       margin-top: 0;
     }
-
+    // Add custom spacing between messages
     &.groupStart-23k01U {
       margin-top: var(--message-spacing);
     }
-
-    // Every message after groupStart-23k01U that's not groupStart
+    // Every message after groupStart that's not groupStart
     & + .cozy-3raOZG:not(.groupStart-23k01U) {
       margin-top: calc(var(--message-padding) / -1);
       padding-top: .175rem;
+    }
+    // Reduce negative margin and padding
+    .messageContent-2qWWxC {
+      margin-left: -5px;
+      padding-left: 5px;
     }
 
     // Buttons
@@ -60,7 +72,6 @@
         background: rgba(var(--accent), 1);
         color: #fff;
       }
-
       &.dangerous-2r8KxV:hover {
         background: rgba(var(--discord-red) / 1);
       }
@@ -75,19 +86,38 @@
 
     // Mentioned
     &.mentioned-xhSam7 {
-      background: var(--background-mentioned);
-      border-radius: var(--border-radius);
-      &:after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 2px;
-        height: 100%;
-        background: rgba(var(--discord-yellow) / 1);
+      .messageContent-2qWWxC {
+        position: relative;
+        &:after {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          border-radius: 0 var(--border-radius) 0 0;
+          height: 100%;
+          width: calc(100% - var(--message-padding));
+          border-left: 2px solid rgba(var(--discord-yellow) / 1);
+          background: var(--background-mentioned);
+        }
+      }
+      .container-1ov-mD {
+        position: relative;
+        &:before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: -5px;
+          height: 100%;
+          width: calc(100% - var(--message-padding) + 5px);
+          border-left: 2px solid rgba(var(--discord-yellow) / 1);
+          background: var(--background-mentioned);
+          border-radius: 0 0 var(--border-radius) 0;
+        }
       }
     }
   }
+
+  // Compact
 
   // Mentions & Chat jumps
   .wrapper-3WhCwL {
@@ -112,16 +142,60 @@
     }
   }
 
+  // Message placeholders
+  .wrapper-3vR61M {
+    background: transparent;
+  }
+  // Pretty much the same as #L3
+  .wrapper-1F5TKx {
+    background: transparent;
+    padding-top: var(--message-padding);
+    padding-bottom: var(--message-padding);
+    padding-left: 0;
+    margin-left: 16px;
+    margin-right: 8px;
+    position: relative;
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: var(--message-border-radius, var(--border-radius));
+      background: var(--background-alt);
+      z-index: -1;
+    }
+    .contents-1R-xLu,
+    .attachmentContainer-2BK1nK {
+      padding-left: calc(40px + (var(--message-padding) * 2));
+    }
+    .avatar-1BDn8e {
+      left: var(--message-padding);
+      top: var(--message-padding);
+      margin-top: 0;
+    }
+    &[style*="margin-top"] {
+      margin-top: var(--message-spacing) !important;
+    }
+    & + .wrapper-1F5TKx:not([style*="margin-top"]) {
+      margin-top: calc(var(--message-padding) / -1);
+      padding-top: .175rem;
+    }
+  }
+
   // Embeds
   .embedFull-2tM8-- {
     background: var(--background-dark);
   }
+
   // Attachments
   .attachment-33OFj0 {
     background: var(--background-dark);
     border-radius: var(--border-radius);
     border: none;
   }
+
   // Code blocks
   pre code,
   code.inline {
