--- a/src/settings/_settings.scss
+++ b/src/settings/_settings.scss
@@ -49,7 +49,8 @@
     background: var(--background-dark);
   }
 
-  .contentRegionScroller-26nc1e {
+  .contentRegionScroller-26nc1e,
+  .contentRegion-3nDuYy {
     background: var(--background);
   }
 }
